objects/NPI_Report__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NP_IDevices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Fab_Group__c</fullName>
        <label>Actual Fab Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaysElapsed__c</fullName>
        <label>Number of Days since Tapeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Hit_300_Wafer__c</fullName>
        <label>Days to Hit 300 Wafer</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>NPI Reports</relationshipLabel>
        <relationshipName>NP_IDevices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FAB</label>
        <referenceTo>FAB__c</referenceTo>
        <relationshipName>NP_IDevices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hit_300_Wafer__c</fullName>
        <label>Hit 300 Wafer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Date__c</fullName>
        <label>Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_Quantity__c</fullName>
        <label>Shipment Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Success_Quat_Year__c</fullName>
        <label>Success Quat Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Wafer__c</fullName>
        <formula>IF(Shipment_Quantity__c  &gt;= 300, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Success Wafer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapeout_Date__c</fullName>
        <label>Tapeout Date</label>
        <type>Date</type>
    </fields>
    <label>NPI Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Actual_Fab_Group__c</columns>
        <columns>DaysElapsed__c</columns>
        <columns>Days_to_Hit_300_Wafer__c</columns>
        <columns>Device__c</columns>
        <columns>FAB__c</columns>
        <columns>Hit_300_Wafer__c</columns>
        <columns>Shipment_Date__c</columns>
        <columns>Shipment_Quantity__c</columns>
        <columns>Success_Quat_Year__c</columns>
        <columns>Tapeout_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NPI-{0000}</displayFormat>
        <label>NPIReport Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPI Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>